TRYING TO FIX SPACING

--- a/style.css
+++ b/style.css
@@ -1,37 +1,40 @@
 html {
-    position:relative;
-    min-height:100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
     font-family: 'Raleway', sans-serif;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f4;
-    padding-bottom:100px;
+    padding-bottom: 100px;
 }
 
 .navigation {
     background-color: #444;
     box-sizing: border-box;
     border-bottom: 1px solid #dddddd;
-    left: 0px;
+    left: 0;
     overflow-y: auto;
-    padding:30px;
+    padding: 10px 0;
     position: fixed;
     text-align: center;
-    top: 0px;
+    top: 0;
     width: 100%;
     z-index: 999;
-    text-decoration: none;
 }
 
 .navigation ul {
-    padding: 0px;
-    margin: 0px;
-    text-decoration: none;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.navigation li {
+    display: inline;
 }
 
 .navigation a {
@@ -52,12 +55,12 @@ body {
     text-decoration: none;
 }
   
-.nav-link:active{
+.nav-link:active {
     color: orange;
     text-decoration: none;
 }
 
-.banner{
+.banner {
     background-image: url("solar_pannels_sky.jpeg");
     background-position: center;
     background-size: cover;
@@ -65,33 +68,32 @@ body {
     height: 400px;
     position: relative;
     text-align: center;
-    top: 100px;
+    margin-top: 60px; /* Adjusted spacing to prevent overlap */
     width: 100%;
     padding: 10px;
-  }
+}
 
-.banner-text{
+.banner-text {
     position: relative;
-    top: 200px;
+    top: 150px;
 }
 
 .container {
     width: 80%;
-    margin: 0 auto;
+    margin: 20px auto;
     padding: 20px;
     background: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
     padding: 10px;
 }
 
 h1 {
     color: #222;
-    font-family: 'Raleway',sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 60px;
     font-weight: 100;
     letter-spacing: 2px;
-    margin: 0px;
+    margin: 0;
     text-align: center;
     text-transform: uppercase;
 }
@@ -100,20 +102,20 @@ h2 {
     color: #333;
     border-bottom: 2px solid #333;
     padding-bottom: 0.5em;
-    font-family: 'Amatic SC',sans-serif;
+    font-family: 'Amatic SC', sans-serif;
     font-size: 30px;
-    margin: 0px;
+    margin: 0;
     text-align: center;
     text-transform: uppercase;
 }
 
-p{
+p {
     color: #000000;
-    font-family: 'Raleway',sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 18px;
-    line-height: 42px;
+    line-height: 1.6;
     text-align: left;
-  }
+}
 
 .team-member {
     margin-bottom: 20px;
